@@ -482,6 +482,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * Linker::formatComment corrupted the passed title object on PHP 5
   if the comment included a section link. Use clone() to make a safe copy.
 * Add wfClone() wrapper since we're still using PHP 4 on some servers.
+* Fixed installer bugs 921 and 3914 (issues with using root and so forth)
 
 
 === Caveats ===
